<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsPage" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beforeBkfstIMD_txtView" 
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/BeforeBreakfastEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beforelchIMD_txtView" 
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/BeforeLunchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1"
            />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beforednrIMD_txtView" 
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/BeforeDinnerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BloodSugarTarget_txtView" 
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/SugarTargetEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/InsulinNeededTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BasalInsulin_txtView" 
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/BasalInsulinEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" 
            android:layout_weight="1"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sensitivity_txtView" />

    </TableRow>

    <Spinner
        android:id="@+id/SensitivitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/SensitivitySpinner" />

    <Button
        android:id="@+id/UserEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonUserDataEntry" />

</TableLayout>
